--- a/source/Grid/index.html
+++ b/source/Grid/index.html
@@ -10,48 +10,45 @@
 <body onload="startTime()">
 <div class="container">
       <div class="bg1">
-        <h2>16 <span>| 24</span></h2>
-        <p>Goals Completed</p>
+        <h2>22 &deg;</h2>
+        <p>Temperature</p>        
       </div>
       <div class="bg2">
         <h2><i class="fas fa-battery-three-quarters"></i></h2>
-        <p>Respiration</p>
+        <p>Respiration</p>      
+      </div>      
+      <div class="bg2">        
+        <h2><i class="fas fa-heartbeat"></i></h2>
+      </div>
+      <div class="bg1">
+        <h2><i class="fad fa-ufo-beam"></i></h2>
       </div>
       <div class="bg2">
+        <h2>08 <span>%</span></h2>
+        <p>Fat Left</p>
+      </div>
+      <div class="bg2">        
+        <h2>158 <span>bpm</span></h2>
+        <p>Heart Beat</p>
+      </div>
+      <div class="bg1">        
         <h2><i class="fas fa-running"></i></h2>
-        <p>Miles</p>
+        <p>Wild Bears</p>
       </div>
-      <div class="bg1">
-        <h2>36 &deg;</h2>
-        <p>Temperature</p>
+      <div class="bg2">        
+        <p id="timer"> </p>
+        <p>Current time</p>
+      </div>    
+      <div class="bg2" style="color: black">
+        <h2>01 <span>| 07</span></h2>
+        <p>Goals Completed</p>
       </div>
-      <div class="bg1">
+      <div class="bg2">
         <h2><i class="fas fa-bed"></i></h2>
         <p>Sleep Keep</p>
       </div>
-      <div class="bg2">
-        <h2>58 <span>bpm</span></h2>
-        <p>Heart Rate</p>
-      </div>
-      <div class="bg1">
-        <h2>85<span>kg</span></h2>
-        <p>Weight</p>
-      </div>
-      <div class="bg1">
-        <h2>28 <span>%</span></h2>
-        <p>Fat Percentage</p>
-      </div>
-      <div class="bg2">
-        <h2>580 <span>kcal</span></h2>
-        <p>AVG Consumption</p>
-      </div>    
-      <div class="bg2">
+      <div class="bg2">         
         <h2><i class="fas fa-dumbbell"></i></h2>
-        <p>Workouts</p>
-      </div>
-      <div class="bg2">
-        <p id="timer"> </p>
-        <p>Current time</p>
       </div>
   
 </div>
