less size , more pics

--- a/source/Grid/index.html
+++ b/source/Grid/index.html
@@ -13,7 +13,7 @@
         <h2>22 &deg;</h2>
         <p>Temperature</p>        
       </div>
-      <div class="bg2">
+      <div class="bg1">
         <h2><i class="fas fa-battery-three-quarters"></i></h2>
         <p>Respiration</p>      
       </div>      
@@ -21,7 +21,7 @@
         <h2><i class="fas fa-heartbeat"></i></h2>
       </div>
       <div class="bg1">
-        <h2><i class="fad fa-ufo-beam"></i></h2>
+        <h2><i class="fal fa-ufo-beam"></i></h2>
       </div>
       <div class="bg2">
         <h2>08 <span>%</span></h2>
@@ -48,7 +48,7 @@
         <p>Sleep Keep</p>
       </div>
       <div class="bg2">         
-        <h2><i class="fas fa-dumbbell"></i></h2>
+        <h2><i class="fas fa-church"></i></h2>
       </div>
   
 </div>
