--- a/source/Grid/index.html
+++ b/source/Grid/index.html
@@ -39,7 +39,7 @@
         <p id="timer"> </p>
         <p>Current time</p>
       </div>    
-      <div class="bg2" style="color: black">
+      <div class="bg2">
         <h2>01 <span>| 07</span></h2>
         <p>Goals Completed</p>
       </div>
